# ECCamera

./: .gitignore  README.md  pyproject.toml
behavior_pack/: manifest.json
behavior_pack/ECCamera/: config.py  ecCameraApi.py  modMain.py
behavior_pack/ECCamera/client/: AnimationInterpolator.py  CameraConfigOperator.py  CameraSession.py  ECCameraClientSystem.py
behavior_pack/ECCamera/data/: ECCameraConfig.py  ECCameraConfig.pyi  cameraConfigs.py  demos.py
behavior_pack/ECCamera/server/: ECCameraServerSystem.py
behavior_pack/ECCamera/uiScript/: CameraHelperScreenNode.py
behavior_pack/netease_commands/: ec_eccamera_eccamera.json
resource_pack/: manifest.json
resource_pack/ui/: _ui_defs.json  camera_helper.json
